# 2-semester-projekt

./: .gitignore  CMakeLists.txt  ChessGUI.code-workspace  build.sh  chess.code-workspace  cleanbuild.sh
AT-Mega/: Makefile  main.c  main.hex
Chess GUI/Source/: Board.cpp  ChessFrame.cpp  ChessPanel.cpp  Piece.cpp
Header/: AI.h  Board.h  Cell.h  ChessFrame.h  ChessPanel.h  DeadPieceWindow.h  ModBus.h  Piece.h  Pieces.h  QueueWindow.h  UR5.h  main.h
Source/: AI.cpp  Board.cpp  Cell.cpp  ChessFrame.cpp  ChessPanel.cpp  DeadPieceWindow.cpp  ModBus.cpp  Piece.cpp  QueueWindow.cpp  UR5.cpp  main  main.cpp
UR5 programmering/: Gruppe6_16.03.script  Gruppe6_16.03.txt  Gruppe6_16.03.urp  default.installation  default.variables
UR5-script/: default.installation  default.variables  main_new.script  main_new.txt  main_new.urp
include/: AI.h  Board.h  Cell.h  ChessFrame.h  ChessPanel.h  ControlWindow.h  DeadPieceWindow.h  ModBus.h  Piece.h  QueueWindow.h  Robot.h  main.h
src/: AI.cpp  Board.cpp  Cell.cpp  ChessFrame.cpp  ChessPanel.cpp  ControlWindow.cpp  DeadPieceWindow.cpp  DeadPieceWindow.d  Makefile  ModBus.cpp  Piece.cpp  QueueWindow.cpp  Robot.cpp  compile_commands.json  main  main.cpp
